k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-planner
spec:
  type: ClusterIP
  ports:
    - name: "8080"
      port: 8080
      protocol: TCP
  selector:
    app: my-planner
